2008-12-10  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (common_sources): Remove strtol.c, strtoll.c,
	strtoul.c and strtoull.c.
	(libc_kernel_a_SOURCES): Add strtol.c, strtoll.c, strtoul.c and
	strtoull.c.

2008-12-10  Neal H. Walfield  <neal@gnu.org>

	* setjmp.h [!RM_INTERN]: Just #include_next <setjmp.h>.
	* Makefile.am (ARCH_COMMON_SOURCES): Remove ia32-setjmp.S.
	(ARCH_KERNEL_SOURCES): Add ia32-setjmp.S.
	(libc_kernel_a_SOURCES): Add setjmp.h.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* profile.h (profile_start): Take additional parameter name2.
	Update users.
	(profile_region): Create the id from the function name and the
	description.
	* profile.c [__gnu_hurd_viengoos__]: Include <s-printf.h>.
	[! __gnu_hurd_viengoos__]: Include <pthread.h>.
	(THREADS): Define.
	(struct site): Rename from this...
	(struct call_site): ... to this.  Add fields name2 and
	nested_calls.
	(SIZE): Rename from this...
	(CALL_SITES): ... to this.
	(sites_hash): Replace this variable...
	(sites_hash_buffer): ... and this one...
	(init): ... and this one...
	(sites): ... and this one...
	(used): ... and this one...
	(epoch): ... and this one...
	(calls): ... and this one...
	(total_time): ... and this one...
	(extant): ... and this one...
	(struct profile_block): ... with this new structure...
	(thread_count): ... this variable...
	(profile_blocks): ... and this variable.  Update users.
	(struct profile_block): New function.
	(profile_stats_dump): Improve output.
	(profile_end): Increment SITE->NESTED_CALLS.
	(profile_start): Take additional parameter name2.  Save it in
	SITE->NAME2.  Call profile_block to get the thread's profile
	block.  Remove initialization code.
	(profile_end): Call profile_block to get the thread's profile
	block.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* backtrace.c (backtrace_print): New function.

2008-11-13  Neal H. Walfield  <neal@gnu.org>

	* profile.c (profile_stats_dump): Sort by the total time.
